tried to fix spacing between different elements in my flex

--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ body{
 }
 
 .header{
-  justify-content: center;
-  padding: 5px;
-  align-self: flex-start;
+  justify-content: space-around;
+  padding: 6px;
+  align-self: auto;
 }
   .main{
      display: flex;
@@ -97,7 +97,7 @@ body{
   justify-content: space-around;
   padding: 10px;
 }
-  .aside-2{
+.aside-2{
     justify-content: space-around;
     padding: 10px;
 }
